objects/vlocity_cmt__TimePolicy__c.object
<CustomObject>
    <description>Time policies represent a reusable definition of the policies and terms for limited time activities such as billing. Used to describe the rules for calculating the commitment and benefit start and end times for a customer&apos;s applied promotion.</description>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EndTimePolicy__c</fullName>
        <label>End Time Policy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>End of Plan Duration</fullName>
                </value>
                <value>
                    <fullName>Cycle End Date</fullName>
                </value>
                <value>
                    <fullName>Set by Order Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsEndProratable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>End Is Proratable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsStartProratable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Start Is Proratable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsStartTimeDelayed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Start Time Delayed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StartTimeDelayOffsetUoM__c</fullName>
        <label>Delay Offset Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StartTimeDelayOffset__c</fullName>
        <label>Delay Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StartTimePolicy__c</fullName>
        <label>Start Time Policy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase Date</fullName>
                </value>
                <value>
                    <fullName>Cycle Start Date</fullName>
                </value>
                <value>
                    <fullName>First Day of Month</fullName>
                </value>
                <value>
                    <fullName>Activation Start</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Time Policy</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>